number alignment fix mobile

--- a/resources/css/sass/pages/_ranklist.scss
+++ b/resources/css/sass/pages/_ranklist.scss
@@ -190,7 +190,7 @@
         }
         .number{
           top: 53%;
-          left: 48%;
+          left: 50%;
         }
       }
     }
